# LogResultAccumulator

./: .gitignore  Dockerfile.accumulator  Dockerfile.loggenerator  Dockerfile.loguploader  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
LogResultAccumulator/src/: accumulator.py  exceptions.py  graph_results.py  result.py
LogResultAccumulator/src/accumulator/: accumulator.py  graph_results.py  result.py  timer.py
LogResultAccumulator/src/log_accumulator/: consumer.py  graph_results.py
LogResultAccumulator/src/log_builder_sender/: log_generator.py  log_uploader.py  main.py
LogResultAccumulator/src/log_producer/: log_generator.py
LogResultAccumulator/terraform/lambda/: main.tf
LogResultAccumulator/terraform/s3/: s3.tf
LogResultAccumulator/tests/: create_log_results.py  test_accumulate_results.py
LogResultAccumulator/tests/test_data/: simple_test_log_results.txt
