[tool.poetry]
name = "logresultaccumulator"
version = "0.1.0"
description = "Accumulate a large number of log results and present a condensed summary of the results"
authors = ["Michael Dreisinger <mike.dreisinger95@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
memory-profiler = "^0.61.0"
boto3 = "^1.26.103"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
